*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9422 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -418,7 +418,7 @@ PlayerStatsExperience.NotAllMatchesVisible=The actual value might be higher beca
 PlayerStatsExperience.NoSkillUpFound=The actual value might be higher because no recorded experience-skillup was found.
 PlayerStatsExperience.ExperienceChange.title=Experience gain
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
-PlayerStatsExperience.Walkover=This game was a walkover. Thatfore the players didn't get any experience.
+PlayerStatsExperience.Walkover=This game was a walkover, therefore the player didn't gain any experience.
 
 #Series statistics
 rating.average=Average rating
