--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -375,6 +375,8 @@ module.SupporterStatsEnhancements.desc=Resalta a los jugadores del equipo actual
 module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfaz de orden del partido. 
 module.MatchOrderInterface.PlayedLastMatch.desc=Resaltar jugadores que jugaron el último partido, mostrar la última posicion y el tiempo jugado en los detalles
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Tambien resaltar en el campo
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Deshabilitar para los partidos de torneos
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidad jugadores
 module.MatchOrderInterface.StayOnPage.desc=Quedarse en la página de órdenes del partido después de guardar la alineación
 module.MatchOrderInterface.SwapPositions.desc=Añadir un enlace para cambiar los jugadores de izquierda a derercha
@@ -414,6 +416,7 @@ PlayerStatsExperience.NotAllMatchesVisible=El valor actual podría ser mayor por
 PlayerStatsExperience.NoSkillUpFound=El valor actual podría ser mayor ya que no hay registro de experiencia previo.
 PlayerStatsExperience.ExperienceChange.title=Subida de experiencia
 PlayerStatsExperience.ExperienceChange.title.abbr=EX+
+PlayerStatsExperience.Walkover=Este juego fue suspendido. Por lo tanto los jugadores no ganaron experiencia.
 
 #Series statistics
 rating.average=Calificaciones promedio
