--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -377,6 +377,7 @@ module.MobileEnhancements.desc=Postavi poboljšanja za mobilne uređaje
 module.MatchOrderInterface.desc=Popravci na stranici postavljanja momčadi. 
 module.MatchOrderInterface.PlayedLastMatch.desc=Ističe igrača koji je igrao u zadnjoj utakmici i pokazuje zadnju poziciju i odigrano vrijeme u okviru
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Također označi i na terenu
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Onemogući za utakmice turnira
 module.MatchOrderInterface.Specialties.desc=Pokaži specijalnosti
 module.MatchOrderInterface.StayOnPage.desc=Ostanite na stranici postavljanja taktike nakon spremanja naloga
 module.MatchOrderInterface.SwapPositions.desc=Dodaj link za mijenjanje igrača s lijeva na desno
