--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -377,6 +377,7 @@ module.MobileEnhancements.desc=모바일 기기를 위한 강화 설정
 module.MatchOrderInterface.desc=경기 지시사항 인터페이스 수정.
 module.MatchOrderInterface.PlayedLastMatch.desc=지난 경기에서 뛴 선수 강조하고 최근 포지션과 출전 시간 보기
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=경기장에도 강조 표시
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=토너먼트 경기에 대해서는 비활성화
 module.MatchOrderInterface.Specialties.desc=선수 특수능력 보기
 module.MatchOrderInterface.StayOnPage.desc=저장 후에 경기 지시사항 페이지에 머물기
 module.MatchOrderInterface.SwapPositions.desc=선수 좌우 바꾸기 링크 추가
