--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -54,6 +54,9 @@ module.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene k
 module.ForumYouthIcons.desc=Vis en lenkebar for ungdomslaget (Fungerer også fot mail)
 #FormatPostingText
 #EmbedMedia
+module.EmbedMedia.EmbedYoutubeVideos.desc=Sett inn YouTube-video
+module.EmbedMedia.EmbedVimeoVideos.desc=Legg til Vimeo-videoer
+module.EmbedMedia.EmbedImageshack.desc=Utvidet støtte til ImageShack (kun Firefox og Chrome)
 #Forum direct page links
 #
 module.CopyPostID.desc=PostId forandringer
@@ -122,31 +125,65 @@ module.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.ek
 #Series statistics
 
 #Save for work
+SafeForWork.title=Tittel
+SafeForWork.icon=Ikon
 
 #Extrashortcuts
 ExtraShortcuts.statistics=statistikk
 ExtraShortcuts.transfers=overganger
+ExtraShortcuts.ManageCHPP=Administrere dine CHPP-produkter
+ExtraShortcuts.prefs=Innstillinger
+ExtraShortcuts.ftprefs=FoxTrick innstillinger
 
 #HistoryStats
+HistoryStats.season=Sesong
+HistoryStats.season.short=S
+HistoryStats.cup=Cup runde
+HistoryStats.cup.short=C
+HistoryStats.league=Serie
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.future=Spilleren kan forfremmes om %1 dag, den %2.;Spilleren kan forfremmes om %1 dager, den %2.
 
 #teamstats+filters
 TeamStats.boxheader=Lagoversikt
+TeamStats.HomeGrownPlayers=Moderklubbspillere
+TeamStats.PurchasedPlayers=Kjøpte spillere
+TeamStats.FilterFor=Filtrer på
 
 #PlayerBirthday
 
 #season stats
 #note to translators. use abreviations of league table where applicable
+seasonstats.boxheader=Sesongoversikt
+seasonstats.played=K
+seasonstats.won=V
+seasonstats.draw=U
+seasonstats.lost=T
+seasonstats.goalplus=MS
+seasonstats.goalminus=MI
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=B
+seasonstats.league=Liga
+seasonstats.friendly=Vennskapskamper
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 #Newsfeed filter
+LeagueNewsFilter.label=Newsfeed filteret\:
+LeagueNewsFilter.all=Alle
+LeagueNewsFilter.transfers=Overganger
 LeagueNewsFilter.lineupChanges=Lagoppstilling utskiftninger
 
 #team pages
 sidebarBox.actions=Funksjoner
 TeamSelectBox.selectplayer=Velg spiller
 ManagerButtons.writeInGuestbook=Skriv i gjestebok
+LineupShortcut.lineup=Lagoppstilling
+ShowFriendlyBooked.ShowFriendlies=Vis vennskapskamper
 
 #Transfer prices
 MedianTransferPrice.median=Medianpris
@@ -171,7 +208,7 @@ ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
 ForumYouthIcons.youthseries=legg til link til ungdomsliga
-ForumSpecialBBCode.br=legg til linjebrems
+ForumSpecialBBCode.br=legg til linjeskift
 ForumSpecialBBCode.user=legg til brukerid
 ForumSpecialBBCode.article=legg til artikkelid
 
@@ -182,34 +219,186 @@ TransferSearchFilters.deleteFilter.ask=Er du sikker på at du vil slette dette f
 TransferSearchFilters.saveFilter=Lagre nytt filter
 
 #Filter
+Filters.clear=Nullstill
+Filters.days=Dager
+Filters.tsi=TSI
+Filters.stamina=Kondisjon
+Filters.Form=Form
+Filters.XP=Rutine
+Filters.specialty=Spesialitet
+Filters.stars=Stjerner
 
 
+match.type.qualification=Kvalifisering
+match.type.cup=Cup
+match.type.friendly=Treningskamp
+match.type.friendly.cup=Treningskamp (cupregler)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=Treningskamp landslag
+match.type.nt.competitive=Verdensmesterskapet
+match.type.youth.league=Ungdomsliga
+match.type.youth.friendly=Ungdomstreningskamp
+match.type.youth.friendly.cup=Ungdomstreningskamp (Cupregler)
 
+matchOrder.noMatchSelected=Ingen kamp valgt
+matchOrder.comparedTo=Sammenlignet med\:
+matchOrder.AddMatchManually=Legg til en kamp manuelt
+matchOrder.options=Alternativer
+matchOrder.summary=Sammendrag
 
 #Skills
 Playmaking=Ballfordeling
 Winger=Ving
 Scoring=Målskåring
-Passing=Pasning
+Passing=Pasninger
 Defending=Forsvar
 Keeper=Målvakt
 Set_pieces=Dødball
 
+PsicoTSI=PsicoTSI (gjennomsnittlig form)
+PsicoTSI.abbr=Psico
+HTMS_Ability=HTMS poeng ferdighet
+HTMS_Ability.abbr=Fer
+HTMS_Potential=HTMS Poeng Potensielle
+HTMS_Potential.abbr=Pot
 
+PlayerCategory=Spillerkategori
+PlayerCategory.abbr=SK
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
+categories.GK=MV
+categories.WB=SB
+categories.CD=MS
 
 #match positions
+match.pos.kp=Keeper
+match.pos.kp.abbr=KEE
+match.pos.lb=Venstreback
+match.pos.lb.abbr=VB
+match.pos.lcd=Venstre midtstopper
+match.pos.lcd.abbr=VMS
+match.pos.mcd=Sentral midtstopper
+match.pos.mcd.abbr=SMS
+match.pos.rcd=Høyre midtstopper
+match.pos.rcd.abbr=HMS
+match.pos.rb=Høyreback
+match.pos.rb.abbr=HB
+match.pos.lw=Venstreving
+match.pos.lw.abbr=VV
+match.pos.lcm=Venstre inner
+match.pos.lcm.abbr=VI
+match.pos.mcm=Sentral inner
+match.pos.mcm.abbr=SI
+match.pos.rcm=Høyre inner
+match.pos.rcm.abbr=HI
+match.pos.rw=Høyreving
+match.pos.rw.abbr=HV
+match.pos.lf=Venstre spiss
+match.pos.lf.abbr=VS
+match.pos.mf=Midtspiss
+match.pos.mf.abbr=MS
+match.pos.rf=Høyre spiss
+match.pos.rf.abbr=HS
 
+match.role.setPieces=Dødballtaker
+match.role.setPieces.abbr=DB
+match.role.captain=Kaptein
+match.role.captain.abbr=Kap
 
+match.player.unknown=Ukjent spiller
 
 # SkillTable
+SkillTable.header=Ferdighetstabell
 SkillTable.switchView=Bytte visning
+SkillTable.addHomegrown=Legg til egenproduserte spillere
 SkillTable.showTimeInClub=Vis tid i klubben
+SkillTable.switchView.title=Endre visningen av tabellen.
+SkillTable.addHomegrown.title=Legger til alle egenproduserte spillere fra den nåværende seniorstallen
+SkillTable.showTimeInClub.title=Viser tid siden spilleren ble medlem av klubbens seniorstall
+TSI.abbr=TSI
+Personality=Personlighet
+Agreeability.abbr=Ag
+Aggressiveness=Aggresjon
+Aggressiveness.abbr=Ag
+Honesty=Ærlighet
+Honesty.abbr=Ærlighet
+Leadership=Lederevne
+Leadership.abbr=LE
+Experience=Rutine
+Experience.abbr=Rut
 Stamina=Kondisjon
+Stamina.abbr=Kon
+Form=Form
+Form.abbr=Fo
+MotherClubBonus.abbr=MB
+Status=Status
+Status.abbr=Status
+Yellow_card=Gult kort
+Yellow_card.abbr=G
+Red_card=Rødt kort
+Red_card.abbr=R
+Speciality=Spesialitet
+Speciality.abbr=Sp
+Last_match=Siste kamp
+Last_match.abbr=Siste
+Last_stars=Siste stjerner
+Last_stars_EndOfGame=Siste gule stjerner
+Last_stars_decline.abbr=Siste kamp stjerner
+Last_position=Siste posisjon
+Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_played_as_at=Spilte %1 min som %2 i sin siste kamp på %3.
+Bruised=Plastret
+Bruised.abbr=Pl
+Injured=Skadet
+Injured.abbr=Sk
+Salary=Lønn
+Salary.abbr=Lønn
+TransferListed=Transferlistet
+TransferListed.abbr=TL
+NrOfMatches=Antall kamper
+NrOfMatches.abbr=K
+LeagueGoals=Ligamål
+LeagueGoals.abbr=LM
+CupGoals=Cup mål
+CupGoals.abbr=CM
+FriendliesGoals=Vennskapskamper mål
+FriendliesGoals.abbr=VG
+CareerGoals=Karrieremål
+CareerGoals.abbr=KM
+Hattricks=Hattricks
+Hattricks.abbr=HT
+Current_club=Nåværende klubb
+Current_club.abbr=Klubb
+Current_league=Gjeldende league
+Current_league.abbr=Serie
+JoinedSince.abbr=Siden
+Hotlist=favorittliste
+Hotlist.abbr=meget interessert
 Coach=Trener
+CurrentSquad=Nåværende tropp
+Nationality=Nasjonalitet
+Nationality.abbr=Nasj
+Flag=Flagg
+Flag.abbr=Flagg
+Player=Spiller
+Player.abbr=Spiller
+Age=Alder
+Age.abbr=Alder
+Match=Kamp
+Series=Serie
+TransferCompare.abbr=SO
+Bookmark=Bokmerke
+Bookmark.abbr=BM
+Deadline=Frist
+Deadline.abbr=Frist
+CurrentBid=Gjeldende bud
+CurrentBid.abbr=Bud
+CurrentBidder=Gjeldende høystbydende
+CurrentBidder.abbr=Nåværende budgiver
+CurrentBidderShort=Gjeldende høystbydende
 
 skilltable.youthplayer=Ungdomsspiller
+skilltable.rebought_youthplayer=Kjøpte tilbake ungdomsspilleren
 
 #confirms
 ConfirmActions.bid=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
@@ -228,14 +417,22 @@ links.custom.tags=Tagger
 links.custom.help=Hjelp
 
 #following string uses pluralForms
+notify.newMail=Du har mottatt %s ny melding.; Du har mottatt %s nye meldinger.
 #following string uses pluralForms
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.id=Kopier %s\: %i
+copy.link=Kopier koblingsadresse i HT-ML
+copy.ht-ml=Kopier i HT-ML
+copy.table=Kopier tabellen i HT-ML
 
 #copy
 copy.playerad=Kopier spillerannonse til utklippstavlen
 copy.playerad.copied=Spilleren har blitt kopiert til utklippstavlen.
+copy.matchid.copied=Kamp-ID har blitt kopiert til utklippstavlen.
+copy.skilltable.title=Kopier ferdighetstabell til utklippstavlen (i HT-ML)
+copy.skilltable.copied=Ferdighetstabellen har blitt kopiert til utklippstavlen.
 copy.postid=Kopier til utklippstavle
 
 #matches
@@ -262,9 +459,24 @@ match.ratings.centershort=M
 match.ratings.leftshort=V
 match.ratings.ifkshort=I
 
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
 
+MatchReportFormat.MatchReport=Kamprapport
+MatchReportFormat.lineup=Lagoppstilling
+MatchReportFormat.kickOff=Avspark
+MatchReportFormat.halfTime=Pause
+MatchReportFormat.fullTime=Full tid
+MatchReportFormat.extraTime=Ekstraomganger
+MatchReportFormat.penaltyShootOut=Straffesparkkonkurranse
+MatchReportFormat.result=Resultat
 
 #teampopups
+Manager=Manager
 Team=Lag
 Matches=Kamper
 Players=Spillere
@@ -274,7 +486,11 @@ SendMessage=Send melding
 Challenge=Utfordre
 Achievements=Prestasjoner
 TransferHistory=Overganger
+TeamHistory=Klubbhistorie
+NextMatch=Neste kamp
+AddNextMatch=Legge til neste kamp i HT-Live
 LastLineup=Siste lagoppstilling
+YouthMatches=Ungdoms kamper
 more=mer..
 less=mindre..
 
@@ -289,29 +505,59 @@ flagCollectionToMap.SAmerica=Sør-Amerika
 flagCollectionToMap.World=Verden
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Skjul plastrede
+TransferSearchResultFilters.hideInjured=Skjul skadede
+TransferSearchResultFilters.hideSuspended=Skjul suspenderte
+TransferSearchResultFilters.days=Dager\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vis
 
 # HTMSPrediction
+HTMSPrediction.prediction=Forutsagte resultat
+HTMSPrediction.winDrawLoss=seier/uavgjort/tap
+HTMSPrediction.title=Kamp analyse av HTMS
+HTMSPrediction.changePrediction=Forandre prediksjon
+HTMSPrediction.team=Lag
 
 #htms table of statistical truth
+truthTable.table=HTMS tabell over statistiske sannheten
+truthTable.predicted_position=\#
+truthTable.name=Lag
+truthTable.real_position=Reell pos.
+truthTable.difference=±
 
 # HTMSPoints
+HTMSPoints=HTMS Poeng\:
+HTMSPoints.AbilityAndPotential=Evne\: %1 / Potensial\: %2
 
 # CrossTable
+CrossTable.graph=Sesonggraf
+CrossTable.table=Krysstabell
 # will be shown as "R13" denoting round 13
+CrossTable.round=R%s
 
 # MyMonitor
+MyMonitor.header=Skjermen min
 #following string uses pluralForms
+MyMonitor.add=Overvåke dette teamet
+MyMonitor.remove=Fjern dette laget fra skjermen min
+MyMonitor.removeTeam=Velg et lag som skal fjernes\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (% t, \# % i)
+MyMonitor.type.senior=Senior
+MyMonitor.type.youth=Ungdom
+MyMonitor.type.nt=nasjonal
 
 # tickers
 ticker.type.welcome=Velkomstmelding
+ticker.type.supporter=Lag du er supporter av logger inn
+ticker.type.forum=Forum svar
 ticker.type.transfer=Overgangs informasjon
 ticker.type.challenge=Utfordring
 ticker.type.guestbook=Gjestebok
 ticker.type.mail=HT-post
+ticker.type.myht=Min Hattrick-melding
 ticker.type.others=Andre
 
 # LocalTime
@@ -324,6 +570,7 @@ LocalTime.local.title=Tid i lokal tidssone. Klikk på klokken for å bytte til H
 pageAction.mainContent=Vis hovedinnhold
 pageAction.all=Vis alle
 
+team.status.booked=Vennskapskamp booket
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -336,17 +583,39 @@ datetimestrings.short_weeks=u
 datetimestrings.short_days=d
 
 # buttons
+button.ok=OK
+button.cancel=Avbryt
+button.close=Lukk
+button.customize=Tilpass
 button.save=Lagre
 button.go=gå til
+button.add=Legg til
+button.remove=Fjern
 button.export=Largre
+button.import=Importer
+button.restoreDefault=Gjenopprett standandinnstillinger
+button.revokePermissions=Fjern tillatelser
 button.copy=Kopier
 button.up=Opp
 button.down=Ned
 
+status.loading=Laster...
+status.loading.abbr=...
+status.error=Feil
+status.error.abbr=\!
+status.unknown=Ukjent
+status.unknown.abbr=?
 
+oauth.authorize=Gi FoxTrick tilgang til informasjon om laget ditt
+oauth.why=Hvorfor bør jeg gi FoxTrick tilgang til informasjon om laget mitt?
+oauth.link=Skaff godkjenningskode fra chpp.hattrick.org
+oauth.success=FoxTrick har nå tilgang til informasjon om laget ditt\! Last denne siden på nytt for utførlig informasjon om FoxTrick.
 
+api.failure=Får ikke tilgang til informasjon fra Hattrick. Du må gi FoxTrick tilgang til informasjon om laget ditt. Hvis du allerede har gjort det, sjekk at du er koblet til internett eller prøv igjen senere.
+api.serverUnavailable=Kan ikke koble til serveren
 api.clearCache=Tøm buffer
 
+exception.error=Feil %s
 
 # keep the following line untranslated
 
@@ -356,19 +625,38 @@ api.clearCache=Tøm buffer
 
 # -----------------------------------------------------------------------------
 # option function strings
+TickerAlert.enable=Aktiver
+TickerAlert.sound=Lyd
+TeamPopupLinks.prefsCaption=Link innstillinger
+TeamPopupLinks.ShowByDefault=Vis som standard
+TeamPopupLinks.ShowOnMore=Vis på mer
+TeamPopupLinks.OpenNewTab=Åpne i ny fane
 
 #toolbar
+toolbar.disableTemporary=Deaktiver midlertidig
+status.disabled=deaktivert
 
 # Captions and labels of foxtrick preferences
 prefs.title=Innstillinger
 
+prefs.view.by.category=Kategorivisning
+prefs.view.by.page=Vis for siste HT-side
 
 
 # tabs in preferences page
 #tabs
+tab.main=Oversikt
+tab.on_page=Moduler på denne siden
+tab.universal=Universelle moduler
+tab.informationAggregation=Sammenfattet informasjon
+tab.shortcutsAndTweaks=Snarveier og tilpasninger
+tab.presentation=Utseende
 tab.matches=Kamper
+tab.forum=Forum
 tab.links=Lenker
 
+prefs.setup.dateFormat=Datoformat
+prefs.setup.country=Land
 
 prefs.storedData.title=Lagrede innstillinger
 # NOTE - please preserve the braces, inner content will be converted to link
@@ -379,6 +667,9 @@ prefs.storedData.title=Lagrede innstillinger
 
 
 
+about.developers=Utviklere
+about.translators=Oversettere
+about.designers=Designere
 
 prefs.getPermissions.alert=%s trenger tillatelse til å arbeide. Tillat tilgang i følgende dialogboks. Hvis du avslår vil denne funksjonen bli deaktivert.
 
