--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -903,7 +903,7 @@ MatchReportFormat.penaltyShootOut=Seri Penaltılar
 MatchReportFormat.result=Sonuç
 
 #teampopups
-Manager=menajer
+Manager=Menajer
 Team=Takım
 Matches=Maçlar
 Players=Oyuncular
