--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -13,6 +13,13 @@
 <item>자세한 내용은 Google Code의 <xhtml:a href="http://code.google.com/p/foxtrick/source/list">보고 기록</xhtml:a>을 참조하세요.</item>
 </note>
 
+<note version="0.9.3">
+<item>● MatchOrderInterface: 최근 경기 정보를 비활성화시키는 옵션과 토너먼트 게임을 강조하는 옵션을 추가하였습니다.(기본적으로 활성화)</item>
+<item>● MatchOrderInterface: Firefox에서 최근 경기 지시자가 표시되지 (않거나 올바르게 표시하지 않던) 버그를 수정하였습니다.</item>
+<item>● PlayerStatsExperience: 레드 카드가 게임을 부전승으로 감지하던 버그를 수정하였습니다.</item>
+<item>● PlayerStatsExperience: 이 모듈이 Firefox 3.6에서 제대로 동작하지 못하도록 야기시키는 문제를 수정하였습니다.</item>
+</note>
+
 <note version="0.9.2">
 <item>● 또 하나의 거대한 언어 업데이트. 모든 번역가분들에게 다시 한 번 감사드립니다.</item>
 <item>● 언거 감지를 재작성했습니다. 다시 이런 문제를 일으키진 않을 것입니다.</item>
@@ -34,7 +41,7 @@
 <item>● ShowLineupSet: HT 변경사항에 따른 깨진 레이아웃을 수정하였습니다.</item>
 <item>● 북마크된 선수의 누락된 playerid을 복구하였습니다.</item>
 <item>● 이적료 중간값을 수정하였습니다.</item>
-<item>● MatchOrder: 최근에 출전했던 선수 강조를 이제 경기장에도 표시됩니다.</item>
+<item>● MatchOrder: 최근 경기에 출전했던 선수 강조를 이제 경기장에도 표시됩니다.</item>
 <item>● AMO 규정을 위한 몇 가지 작업이 있었습니다.</item>
 <item></item>
 <item><xhtml:b>Google Chrome 사용자에게</xhtml:b></item>
