Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9443 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1170,12 +1170,12 @@ prefs.loadSave.export.notice=Ископирајте садржај поља са
 prefs.loadSave.import=Увезите Фокстрик подешавања (Постојећа подешавања ће бити пребрисана!)
 prefs.loadSave.import.notice=Унесите ваша раније сачувана подешавања у поље за текст и кликните на дугме "Увези" да увезете подешавања.
 
-prefs.additional.title=Главне опције
+prefs.additional.title=Додатне опције
 prefs.additional.xmlLoad=Учитај XML фајлове за додатне информације са Хеттрика
 prefs.additional.smallCopyIcons=Прикажи све иконице за копирање у заглављу уместо у менију са десне стране
 prefs.additional.anstoss2Icons=Користи Anstoss2 сет иконица за приказ специјалности играча
 prefs.additional.featureHighlight=Означи све Фокстрикове додатке
-prefs.additional.translationKeys=Прикажи клучеве за превођење уместо превода
+prefs.additional.translationKeys=Прикажи кључеве за превођење уместо превода
 prefs.additional.HTMLDebugLog=Прикажи 'FoxTrick log' на дну сваке странице (ради пријаве багова)
 
 prefs.feedback.saved=Подешавања су сачувана!
